Change deprecated method use